<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/L1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/EditNumb"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint"
            android:layout_gravity="center"
            android:inputType="none" />


        <ImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="buttonClickEvent"
            android:tint="#000000"
            app:srcCompat="@android:drawable/ic_input_delete" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/L2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/cust_numb"
            android:onClick="buttonClickEvent"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="buttonClickEvent"
            android:background="@drawable/cust_numb"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="buttonClickEvent"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:text="@string/three"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/L3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="buttonClickEvent"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:text="@string/four"
            android:textSize="20sp"
             />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClickEvent"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/five"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="buttonClickEvent"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/six"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/L4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/seven"
            android:textSize="20sp"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:onClick="buttonClickEvent"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/eight"
            android:textSize="20sp"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:onClick="buttonClickEvent"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nine"
            android:textSize="20sp"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:onClick="buttonClickEvent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/L5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/star"
            android:textSize="20sp"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:onClick="buttonClickEvent"/>

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="buttonClickEvent"
            android:text="@string/zero"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonHash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/hash"
            android:textSize="20sp"
            android:background="@drawable/cust_numb"
            android:textColor="@color/black"
            android:onClick="buttonClickEvent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/L6"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonClear"
            android:layout_width="90dp"
            android:layout_marginLeft="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/red_button"
            android:onClick="buttonClickEvent"
            android:tint="@color/white"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <ImageButton
            android:id="@+id/buttonDial"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:onClick="buttonClickEvent"
            android:src="@android:drawable/stat_sys_phone_call"
            android:tint="#FDFDFD"
            tools:srcCompat="@android:drawable/stat_sys_phone_call" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/buttonFav"
        android:layout_width="137dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/fav_button"
        android:textColor="@color/white"
        android:tint="#F4F4F4"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/infotext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>

